# fastapi-betterauth

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
examples/: fastapi_demo.py
examples/frontend/: .cta.json  README.md  auth-schema.sql  package.json  pnpm-lock.yaml
examples/frontend/src/: routeTree.gen.ts
examples/frontend/src/lib/: auth.ts
examples/frontend/src/routes/: __root.tsx  index.tsx  login.tsx  register.tsx
examples/frontend/src/routes/api/auth/: $.ts
src/fastapi_betterauth/: __init__.py
tests/: test_fastapi_dependency.py  test_fetch_token.py
